--- a/index.html
+++ b/index.html
@@ -104,25 +104,25 @@
                     <div class="progress">
                       <div class="progress-bar" role="progressbar" style="width: 85%" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
-                    <span>VUE</span> <span class="pull-right">75%</span>
+                    <span>VUE</span> <span class="pull-right">90%</span>
+                    <div class="progress">
+                      <div class="progress-bar" role="progressbar" style="width: 90%" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
+                    <span>ANGULAR</span> <span class="pull-right">75%</span>
+                    <div class="progress">
+                      <div class="progress-bar" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
+                    <span>REACT</span> <span class="pull-right">40%</span>
+                    <div class="progress">
+                      <div class="progress-bar" role="progressbar" style="width: 40%" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
+                    <span>JAVA</span> <span class="pull-right">40%</span>
+                    <div class="progress">
+                      <div class="progress-bar" role="progressbar" style="width: 40%" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
+                    <span>NODE JS</span> <span class="pull-right">50%</span>
                     <div class="progress">
                       <div class="progress-bar" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
-                    </div>
-                    <span>ANGULAR</span> <span class="pull-right">85%</span>
-                    <div class="progress">
-                      <div class="progress-bar" role="progressbar" style="width: 85%" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
-                    </div>
-                    <span>REACT</span> <span class="pull-right">65%</span>
-                    <div class="progress">
-                      <div class="progress-bar" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
-                    </div>
-                    <span>JAVA</span> <span class="pull-right">50%</span>
-                    <div class="progress">
-                      <div class="progress-bar" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
-                    </div>
-                    <span>NODE JS</span> <span class="pull-right">70%</span>
-                    <div class="progress">
-                      <div class="progress-bar" role="progressbar" style="width: 70%" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
 
                   </div>
@@ -135,26 +135,28 @@
                       </h5>
                     </div>
                     <p class="lead">
-                        I bring over 9 years of dedicated experience as a Full Stack Developer, which has allowed me to cultivate a wide-ranging skill set encompassing both front-end and back-end technologies.
+                        With over 8 years of experience as a Front End Developer, my expertise lies in crafting engaging and user-friendly web applications using HTML, CSS, and JavaScript. I specialize in modern front-end libraries and frameworks, including TypeScript, Angular, React, and Vue. My proficiency in Vue.js extends to creating dynamic and responsive user interfaces, enhancing the overall user experience.
                     </p>
                     <p class="lead">
-                        On the front-end side, I have honed my proficiency in creating engaging and user-friendly web applications using a variety of tools and languages. I am well-versed in crafting visually appealing interfaces through HTML, CSS, and JavaScript, and I have a strong command of modern front-end libraries and frameworks such as TypeScript, Angular, React, and Vue. These skills have enabled me to consistently deliver exceptional user experiences.
+                        My Vue.js experience includes 4 years of dedicated development, where I have successfully contributed to the creation of interactive and seamless user interfaces. Leveraging Vue.js, I excel in developing front-end components, managing state efficiently, and integrating Vue.js seamlessly into larger application architectures. This expertise allows me to consistently deliver exceptional user experiences, showcasing my commitment to staying at the forefront of cutting-edge front-end technologies.
                     </p>
                     <p class="lead">
-                        Shifting to the back-end, I have a robust foundation in Node JS, Java, Spring Boot, and microservices architecture. This knowledge equips me to develop scalable and efficient server-side components, ensuring the seamless functionality of web applications. I have successfully integrated various APIs, optimized server performance, and maintained the security and stability of back-end systems.
+                        While my primary focus is on front-end technologies, I also possess knowledge in the back-end realm, with a solid foundation in Node.js, Java, Spring Boot, and microservices architecture. This allows me to contribute to the development of scalable and efficient server-side components, ensuring seamless functionality for web applications. I am adept at integrating various APIs, optimizing server performance, and maintaining back-end system security and stability.
                     </p>
                     <p class="lead">
-                        In today's cloud-driven landscape, I have adapted to the demands of modern development by acquiring expertise in cloud technologies. My experience extends to Amazon Web Services (AWS), including the utilization of EC2 instances and S3 buckets, as well as familiarity with Microsoft Azure. Furthermore, I have a keen understanding of Continuous Integration/Continuous Deployment (CI/CD) pipelines, allowing for efficient and automated code delivery.
+                        Embracing the cloud-driven landscape, I have acquired expertise in cloud technologies, particularly Amazon Web Services (AWS) and Microsoft Azure. This includes utilizing EC2 instances and S3 buckets. Additionally, I have a keen understanding of Continuous Integration/Continuous Deployment (CI/CD) pipelines, enabling efficient and automated code delivery to enhance the development process.
                     </p>
                     <p class="lead">
-                        In the realm of containerization and orchestration, I have hands-on experience with Docker and Kubernetes. This expertise empowers me to streamline application deployment and management, ensuring consistency across various environments.
+                        In containerization and orchestration, I have hands-on experience with Docker and Kubernetes, streamlining application deployment and management for consistent performance across diverse environments. This aligns seamlessly with my focus on front-end development and contributes to a holistic understanding of application deployment practices.
                     </p>
                     <p class="lead">
-                        When it comes to data management, I am well-versed in both SQL and NoSQL databases, enabling me to make informed decisions regarding data storage and retrieval. I have effectively implemented database solutions tailored to project requirements, optimizing data access and management.
+                        My proficiency extends to both SQL and NoSQL databases, enabling me to make informed decisions on data storage and retrieval. I implement tailored database solutions that optimize data access and management, ensuring the seamless integration of back-end and front-end functionalities in web applications.
                     </p>
                     <p class="lead">
-                        Finally, I place a strong emphasis on software quality through rigorous testing practices. I am proficient in using Junit for backend testing and Jasmine and Karma for front-end testing. This dedication to testing not only ensures the reliability of the applications I develop but also contributes to a culture of quality within development teams.
+                        Prioritizing software quality, I employ rigorous testing practices. Proficient in using Jasmine and Karma for front-end testing, I ensure the reliability of applications developed. This commitment to quality contributes to fostering a culture of excellence within development teams, emphasizing Vue.js as a key element in delivering exceptional user-centric applications.
                     </p>
+
+
                   </div>
                 </div>
               </div>
