--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <div class="container">
           <!--<p class="display-6 color-d">Hello, world!</p>-->
           <h1 class="hero-title mb-4">I am Bhanu Kavya T</h1>
-          <p class="hero-subtitle"><span class="typed" data-typed-items="Full Stack Developer, Front End Developer, Back End Developer"></span></p>          
+          <p class="hero-subtitle"><span class="typed" data-typed-items="Front End Developer, Vue JS Developer, Web Develope"></span></p>          
         </div>
       </div>
     </div>
@@ -72,15 +72,10 @@
               <div class="row">
                 <div class="col-md-6">
                   <div class="row">
-                    <!--<div class="col-sm-6 col-md-5">
-                      <div class="about-img">
-                        <img src="assets/img/testimonial-2.jpg" class="img-fluid rounded b-shadow-a" alt="">
-                      </div>
-                    </div>-->
                     <div class="col-sm-6 col-md-7">
                       <div class="about-info">
                         <p><span class="title-s">Name: </span> <span>Bhanu Kavya T</span></p>
-                        <p><span class="title-s">Profile: </span> <span>Full Stack Developer</span></p>
+                        <p><span class="title-s">Profile: </span> <span>Front End Developer</span></p>
                         <p><span class="title-s">Email: </span> <span>bhanukavya.tippanaboyana@gmail.com</span></p>
                         <p><span class="title-s">Phone: </span> <span>(650) 391-6504</span></p>
                       </div>
